ingress/ingress-portainer.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-portainer
  namespace: portainer
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /portainer
        pathType: Prefix
        backend:
          service:
            name: portainer
            port:
              number: 9000
