ingress/ingress-varunkalia_bkp.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-varunkalia
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: "varunkalia.kubekluster.com"
    http:
      paths:
      - path: /(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: varunkalia
            port:
              number: 8080
